[refactor] boardType enum type 수정